Test on a body thrown in a given diretcion

--- a/ConsoleApp1/ConsoleApp1.csproj
+++ b/ConsoleApp1/ConsoleApp1.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AcceleratedMotionTest.cs" />
     <Compile Include="IMethod.cs" />
     <Compile Include="ITest.cs" />
     <Compile Include="Program.cs" />
