--- a/ConsoleApp1/ConsoleApp1.csproj
+++ b/ConsoleApp1/ConsoleApp1.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="IMethod.cs" />
     <Compile Include="ITest.cs" />
+    <Compile Include="MethodEuler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="State.cs" />
