--- a/ConsoleApp1/ConsoleApp1.csproj
+++ b/ConsoleApp1/ConsoleApp1.csproj
@@ -48,11 +48,13 @@
     <Compile Include="AcceleratedMotionTest.cs" />
     <Compile Include="IMethod.cs" />
     <Compile Include="ITest.cs" />
+    <Compile Include="IView.cs" />
     <Compile Include="MethodEuler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="State.cs" />
     <Compile Include="StraightMotionTest.cs" />
+    <Compile Include="TextStreamView.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
