--- a/ConsoleApp1/ConsoleApp1.csproj
+++ b/ConsoleApp1/ConsoleApp1.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AcceleratedMotionTest.cs" />
+    <Compile Include="GnuPlotView.cs" />
     <Compile Include="IMethod.cs" />
     <Compile Include="ITest.cs" />
     <Compile Include="IView.cs" />
